blue-core: upgrade Dictionary